--- a/style.css
+++ b/style.css
@@ -1,23 +1,104 @@
-#start-quiz #start-new-quiz {
+* {
+  font-family: 'Poppins', sans-serif;
+}
+#start-quiz, #start-new-quiz {
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin: 100px 50px auto;
 }
 
-/* .photo {
-  display: flex;
-  justify-content: center;
-} */
 .feedback .correct-answer {
+  margin-top: 10px;
   text-align: center;
 }
 .correct {
-  background-color: #19a7d2;
+  background-color: #19a7d2a8;
 }
 .incorrect {
-  background-color: lightcoral;
+  background-color: #f08080ad
 }
-.start-end-screen .question-screen {
+.center-button{
+
+  display: flex;
+  justify-content: center;
+
+}
+.salsa-dance-quiz {
+  height: 100vh;
+  background-image: url("img/salsa_poster.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+.salsa-dance-quiz h2 {
+background: rgba(0, 0, 0, 0.75);
+margin-top: 0px;
+margin-bottom: 0px;
+color: white;
+text-align: center;
+}
+.start-end-screen  {
   /* border: solid black 1px; */
   display: grid;
-  grid-template-areas: ". photo header photo2 .";
+  grid-template-areas: "....header....";
+}
+
+.question-screen  {
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-areas: ".header header.";
+
+}
+
+
+.start-end-info{
+  text-align: center;
+  margin-top:0;
+  background:#ddd;
+  color:#555;
+  font-size: .8em;
+  font-weight: bolder;
+}
+
+/* Button Classes */
+.myButton {
+  margin-top:10px;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+	background-color:#f9f9f9;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+	background-color:#e9e9e9;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+@media screen and (max-width: 600px) {
+  .question-screen  {
+
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas: "header";
+  
+  }
+
+  #start-quiz {
+    margin: 150px 50px auto;
+  }
+
 }
